creating Refinery::Locations::Region model

--- a/app/views/refinery/locations/admin/locations/_actions.html.erb
+++ b/app/views/refinery/locations/admin/locations/_actions.html.erb
@@ -30,4 +30,9 @@
         refinery.locations_admin_imports_path,
         :class => "layout_edit_icon" -%>
   </li>
+  <li>
+    <%= link_to t('refinery.locations.admin.locations.show.switch2'), 
+        refinery.locations_admin_regions_path,
+        :class => "layout_edit_icon" -%>
+  </li>
 </ul>
