--- a/app/views/refinery/locations/admin/locations/_form.html.erb
+++ b/app/views/refinery/locations/admin/locations/_form.html.erb
@@ -2,7 +2,12 @@
   <%= render '/refinery/admin/error_messages',
               :object => @location,
               :include_object_name => true %>
-
+              
+  
+  <div class='field'>
+    <%= f.label :region_id %>
+    <%= f.select :region_id, regions.map { |r| [r.name.titleize, r.id] } %>
+  </div>
   
   <div class='field'>
     <%= f.label :name -%>
