--- a/app/views/refinery/locations/admin/regions/_form.html.erb
+++ b/app/views/refinery/locations/admin/regions/_form.html.erb
@@ -13,5 +13,5 @@
   <%= render '/refinery/admin/form_actions', :f => f,
              :continue_editing => false,
              :delete_title => t('delete', :scope => 'refinery.locations.admin.regions.region'),
-             :delete_confirmation => t('message', :scope => 'refinery.admin.delete', :title => @region.name) %>
+             :delete_confirmation => deletion_confirmation_massage(@region) %>
 <% end -%>
