removing refinery_imports

--- a/app/views/refinery/locations/admin/regions/_actions.html.erb
+++ b/app/views/refinery/locations/admin/regions/_actions.html.erb
@@ -26,7 +26,7 @@
 <hr />
 <ul>
   <li>
-    <%= link_to t('refinery.locations.admin.imports.show.switch'), 
+    <%= link_to t('refinery.locations.admin.regions.show.switch'), 
         refinery.locations_admin_locations_path,
         :class => "layout_edit_icon" -%>
   </li>
