--- a/app/views/refinery/locations/admin/regions/_region.html.erb
+++ b/app/views/refinery/locations/admin/regions/_region.html.erb
@@ -1,4 +1,4 @@
-<li class='clearfix record <%= cycle("on", "on-hover") %>'>
+<li class='clearfix record <%= cycle("on", "on-hover") %>' id="<%= dom_id(region) -%>">
   <span class='title'>
     <%= region.name %>
 
