showing a message when trying to add a new location without any region on db

--- a/app/views/refinery/locations/admin/locations/new.html.erb
+++ b/app/views/refinery/locations/admin/locations/new.html.erb
@@ -1,1 +1,11 @@
-<%= render 'form' %>
+<div>
+  <%- if regions.any? -%>
+    <%= render 'form' %>
+  <%- else -%>
+    <p>
+      <strong>
+        <%= t('.no_regions_yet') %>
+      </strong>
+    </p>
+  <% end %>
+</div>
