--- a/app/views/refinery/locations/admin/locations/_form.html.erb
+++ b/app/views/refinery/locations/admin/locations/_form.html.erb
@@ -79,6 +79,11 @@
                :field => :menu_id,
                :resource => @location.menu %>
   </div>
+  
+   <div class='field'>
+    <%= f.label :hours, "Hours (separeted by semicolons)" -%> 
+    <%= f.text_area :hours, rows: 4, :class => 'larger widest' -%>
+  </div>
 
 
   <%= render '/refinery/admin/form_actions', :f => f,
