decreasing a little bit the font-size of hours field

--- a/app/views/refinery/locations/admin/locations/_form.html.erb
+++ b/app/views/refinery/locations/admin/locations/_form.html.erb
@@ -82,7 +82,7 @@
   
    <div class='field'>
     <%= f.label :hours, "Hours (separeted by semicolons)" -%> 
-    <%= f.text_area :hours, rows: 4, :class => 'larger widest' -%>
+    <%= f.text_area :hours, rows: 4, :class => 'larger widest', :style => "font-size: 150%;" -%>
   </div>
 
 
