using line breaks to enter locations hours

--- a/app/views/refinery/locations/admin/locations/_form.html.erb
+++ b/app/views/refinery/locations/admin/locations/_form.html.erb
@@ -81,7 +81,7 @@
   </div>
   
    <div class='field'>
-    <%= f.label :hours, "Hours (separeted by semicolons)" -%> 
+    <%= f.label :hours, "Hours (Use Shift+Enter to create a line break without submitting the form)" -%> 
     <%= f.text_area :hours, rows: 4, :class => 'larger widest', :style => "font-size: 150%;" -%>
   </div>
 
