adding address_description column to refinery_locations table

--- a/app/views/refinery/locations/admin/locations/_form.html.erb
+++ b/app/views/refinery/locations/admin/locations/_form.html.erb
@@ -48,6 +48,11 @@
     <%= f.text_field :country, :class => 'larger widest'  -%>
   </div>
   
+   <div class='field'>
+    <%= f.label :address_description -%>
+    <%= f.text_field :address_description, :class => 'larger widest'  -%>
+  </div>
+  
   <div class='field'>
     <%= f.label :email -%>
     <%= f.text_field :email, :class => 'larger widest'  -%>
