--- a/app/views/refinery/locations/admin/locations/_form.html.erb
+++ b/app/views/refinery/locations/admin/locations/_form.html.erb
@@ -58,6 +58,11 @@
     <%= f.text_field :phone, :class => 'larger widest'  -%>
   </div>
 
+   <div class='field'>
+    <%= f.label :email -%>
+    <%= f.email_field :email, :class => 'larger widest'  -%>
+  </div>
+
   <div class='field'>
     <%= f.label :image -%>
     <%= render '/refinery/admin/image_picker',
