--- a/app/views/refinery/locations/admin/locations/_form.html.erb
+++ b/app/views/refinery/locations/admin/locations/_form.html.erb
@@ -3,6 +3,8 @@
               :object => @location,
               :include_object_name => true %>
 
+  <%= render '/refinery/admin/locale_picker', :current_locale => Globalize.locale %>
+
 
   <div class='field'>
     <span>
